--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="Box">
+      <button class="btn-modal">Show More</button>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
