--- a/index.html
+++ b/index.html
@@ -8,8 +8,29 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="Box">
+    <div class="box">
       <button class="btn-modal">Show More</button>
+      <div class="overlay"></div>
+      <div class="modal__box">
+        <h3 class="modal__title">Are you sure?</h3>
+        <p class="modal__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga et quos
+          eligendi, cumque iusto, tenetur consequatur sit laborum qui est
+          voluptates veniam, assumenda quasi neque!
+        </p>
+        <p class="modal__text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Necessitatibus non quam repellendus id reiciendis provident, fuga
+          culpa, doloribus fugit eaque dolorum unde ipsam itaque odit illum
+          quisquam ipsum, aut quis.
+        </p>
+        <div class="buttons">
+          <button class="btn-modal modal__button">Yes!</button>
+          <button class="btn-modal modal__button modal__button--close">
+            No
+          </button>
+        </div>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
