--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="box">
-      <button class="btn-modal">Show More</button>
+      <button class="btn btn-modal">Show More</button>
       <div class="overlay"></div>
       <div class="modal__box">
         <h3 class="modal__title">Are you sure?</h3>
@@ -25,10 +25,8 @@
           quisquam ipsum, aut quis.
         </p>
         <div class="buttons">
-          <button class="btn-modal modal__button">Yes!</button>
-          <button class="btn-modal modal__button modal__button--close">
-            No
-          </button>
+          <button class="btn modal__button">Yes!</button>
+          <button class="btn modal__button modal__button--close">No</button>
         </div>
       </div>
     </div>
