--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           quisquam ipsum, aut quis.
         </p>
         <div class="buttons">
-          <button class="btn modal__button">Yes!</button>
-          <button class="btn modal__button modal__button--close">No</button>
+          <button class="btn modal__button modal__button--yes">Yes!</button>
+          <button class="btn modal__button modal__button--no">No</button>
         </div>
       </div>
     </div>
